Prevent margin collapsing, causing the Context Menu appearing in a wrong position

--- a/less/hot/_jsdoc.less
+++ b/less/hot/_jsdoc.less
@@ -4,6 +4,11 @@
 @colorLink: #037BD2;
 @colorBgNavi: #f2f2f2;
 
+body {
+  /* prevent wrapper->body margin collapsing */
+  padding-top: 0.1px;
+}
+
 .font-description () {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
